Archive2/57/0903b822654002/main.cpp
void main(int, char **) {
    return 0;
}